--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html>
 <head>
-<title>website</title>
+<title>Stella watches</title>
 <link rel="stylesheet" href="css/style.css">
 <link rel="stylesheet" href="css/all.css">
 </head>
@@ -443,5 +443,6 @@
 </div> <!-- parent -->
 
 </body>
+
 
 </html>
